# nyc-housing-inspection-rl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
configs/: README.md
configs/experiments/: ahv_temporal_rl_v1.json
configs/scenarios/: ahv_baseline.json
data/: README.md
data/manifests/: 2026-07-06.json  dob-complaint-universe.json
docs/: SPRINT3_SPEC.md  learning-guide.md
docs/architecture/: system-design.md
docs/architecture/decisions/: 0001-validation-boundary.md  0002-clean-portfolio-repository.md
docs/audit/: coursework-audit.md
docs/ci/: github-actions.yml
docs/data/: ahv-cohort-2026-07-06.md  data-sources.md  dob-complaint-universe.md
docs/papers/: README.md  scaling-the-queue.bib
docs/product/: policy-lab-product-brief.md
docs/project/: roadmap.md
docs/research/: methodology.md  published-foundation.md  restricted-materials.md  temporal-benchmark-protocol.md  verification-notes-2026-07-16.md
docs/simulation/: ahv-simulator-calibration.md
docs/trust-safety/: simulator-guardrails.md
scripts/: profile_complaint_universe.py
src/nyc_housing_rl/: __init__.py  cli.py  domain.py
src/nyc_housing_rl/api/: __init__.py  (+3 more)
tests/: test_domain.py
tests/api/: test_policy_runs.py
tests/data/: test_builders.py  test_client.py  test_lineage.py  test_profile.py  test_schemas.py  test_silver.py  test_snapshot.py
tests/evaluation/: test_runner.py
tests/policies/: test_baselines.py  test_learned.py
tests/simulation/: test_environment.py  test_scenarios.py
web/: README.md  package.json  tsconfig.json
(+24 files in other folders)
