[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "nyc-housing-inspection-rl"
version = "0.1.0"
description = "Reproducible RL research and simulation for NYC building-inspection allocation"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Ali Hasan" }]
keywords = ["reinforcement-learning", "operations-research", "civic-tech", "fairness"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.116",
  "gymnasium>=1.1",
  "httpx>=0.28",
  "polars>=1.26",
  "pydantic>=2.11",
  "uvicorn[standard]>=0.35",
]

[project.scripts]
civic-inspection = "nyc_housing_rl.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nyc_housing_rl"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=nyc_housing_rl --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
